--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "mongoose": "^6.4.0",
     "multer": "^1.4.4",
     "multer-gridfs-storage": "^5.0.2",
-    "nodemon": "^2.0.16"
+    "nodemon": "^2.0.16",
+    "react-paginate": "^8.1.3"
   }
 }
