--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-REACT_APP_BASE_API_URL = http://localhost:3000
-REACT_APP_BASE_API_URL_NEW = https://noksha-api.herokuapp.com
+REACT_APP_BASE_API_URL_NEW = http://localhost:3000
+REACT_APP_BASE_API_URL = https://noksha-api.herokuapp.com
