--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "jquery": "^3.6.0",
     "popper.js": "^1.16.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.4.0",
     "react-dom": "^18.2.0",
     "react-paginate": "^8.1.3",
     "react-router-dom": "^6.3.0",
