--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "@splidejs/react-splide": "^0.7.8",
     "@splidejs/splide": "^4.0.7",
+    "@stripe/react-stripe-js": "^1.10.0",
+    "@stripe/stripe-js": "^1.35.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^14.4.2",
@@ -12,6 +14,7 @@
     "babel-preset-es2015": "^6.24.1",
     "bootstrap": "^5.2.0",
     "font-awesome": "^4.7.0",
+    "imgbb-uploader": "^1.5.0",
     "jquery": "^3.6.0",
     "popper.js": "^1.16.1",
     "react": "^18.2.0",
@@ -20,6 +23,7 @@
     "react-paginate": "^8.1.3",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
+    "react-use-cart": "^1.13.0",
     "styled-components": "^5.3.5",
     "validator": "^13.7.0",
     "web-vitals": "^2.1.4"
