--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-NOKSHA_DB = mongodb+srv://udoy:udoy@noksha.kluyy.mongodb.net/cloths?retryWrites=true
+NOKSHA_DB = mongodb+srv://<username>:<password>@noksha.kluyy.mongodb.net/cloths?retryWrites=true
 JWT_SECRET = noksha
